# discord-bot

./: .gitignore  Dockerfile  README.md  app.py  env.example  pyproject.toml  sample_users.csv
src/app/: app.py  dependencies.py
src/app/dashboard/: __init__.py  main.py
src/app/routes/: users.py
src/discord_bot/: __init__.py  bot.py
src/models/: database.py  schemas.py  user.py
src/utils/: helpers.py
